--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,6 +1,7 @@
 <header class="navbar navbar-expand navbar-light bg-light">
   <h1 class="navbar-brand mb-0 h1">QUIZ</h1>
   <nav class="navbar-nav ml-3">
+      <a href="/" class="nav-item nav-link <%= (active === 'home') ? 'active' : 'inactive' -%>">Home</a>
     <a href="/users" class="nav-item nav-link <%= (active === 'users') ? 'active' : 'inactive' -%>">Users</a>
     <a href="/questions" class="nav-item nav-link <%= (active === 'questions') ? 'active' : 'inactive' -%>">Questions</a>
   </nav>
