--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -2,12 +2,13 @@
 <html>
   <%- include('../head'); -%>
   <body>
-    <%- include('../navbar', {active: 'questions'}); -%>
+    <%- include('../navbar', {active: 'users'}); -%>
     <div class="container-fluid">
       <div class="row">
+        <h1>Users</h1>
         <ul>
           <%_ for (const user of users) {
-          <li><%= user.id -%>,   <%= user.first_name  -%>,  <%= user.last_name-%></li>
+          <li><%= user.user_id -%>,   <%= user.first_name  -%>,  <%= user.last_name-%></li>
           <%_ }}} -%>
           </ul>
       </div>
