--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <%- include('../navbar', {active: 'home'}); -%>
     <div class="container-fluid">
       <div class="row">
-        Stuff
+        Quiz Your Friends
       </div>
     </div>
   </body>
