--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -6,7 +6,23 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-auto p-3 border-right">
-
+          <nav class="nav nav-pills flex-column">
+            <%_ for (const user of userIDs) { -%>
+              <%_ const status = (user === question.user_id) ? 'active bg-dark' : 'inactive'; -%>
+              <a href="/questions/<%= user -%>" class="nav-item nav-link <%= status -%>"></a>
+            <%_ } -%>
+          </nav>
+          This is the questions page
+        </div>
+        <div class="col">
+          <main class="p-3">
+            <h2 class="text-center"><%= question.user_id</h2>
+            <h3>Question: question.question</h3>
+            <%_ for (const option of question.options) { -%>
+              <p><%= option -%></p>
+            <%_ } -%>
+            <h3>Answer: question.answer</h3>
+          </main>
         </div>
       </div>
     </div>
