--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,8 +7,8 @@
       <div class="row">
         <h1>Users</h1>
         <ul>
-          <%_ for (const user of users) {
-          <li><%= user.user_id -%>,   <%= user.first_name  -%>,  <%= user.last_name-%></li>
+          <%_ for (const user of users) { -%>
+          <li><%- user.user_id -%>,   <%- user.first_name  -%>,  <%- user.last_name-%></li>
           <%_ } -%>
           </ul>
       </div>
