--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -15,12 +15,14 @@
         </div>
         <div class="col">
           <main class="p-3">
-            <h2 class="text-center"><%- question[0].user_id -%></h2>
-            <h3>Question: <%- question[0].question -%></h3>
-            <%_ for (const option of question[0].options) { -%>
-              <p><%= option -%></p>
+            <%_ for (const aQuestion of question) { -%>
+              <h2 class="text-center"><%- aQuestion.user_id -%></h2>
+              <h3>Question: <%- aQuestion.question -%></h3>
+              <%_ for (const option of aQuestion.options) { -%>
+                <p><%= option -%></p>
+              <%_ } -%>
+              <h3>Answer: <%- aQuestion.answer -%></h3>
             <%_ } -%>
-            <h3>Answer: <%- question[0].answer -%></h3>
           </main>
         </div>
       </div>
