--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -2,30 +2,7 @@
 <html>
   <%- include('../head'); -%>
   <body>
-    <%- include('../navbar', {active: 'questions'}); -%>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-auto p-3 border-right">
-          <nav class="nav nav-pills flex-column">
-            <%_ for (const user of userIDs) { -%>
-              <%_ const status = (user === question.user_id) ? 'active bg-dark' : 'inactive'; -%>
-              <a href="/questions/<%= user -%>" class="nav-item nav-link <%= status -%>"></a>
-            <%_ } -%>
-          </nav>
-        </div>
-        <div class="col">
-          <main class="p-3">
-            <%_ for (const aQuestion of question) { -%>
-              <h2 class="text-center"><%- aQuestion.user_id -%></h2>
-              <h3>Question: <%- aQuestion.question -%></h3>
-              <%_ for (const option of aQuestion.options) { -%>
-                <p><%= option -%></p>
-              <%_ } -%>
-              <h3>Answer: <%- aQuestion.answer -%></h3>
-            <%_ } -%>
-          </main>
-        </div>
-      </div>
-    </div>
+    <%- include('./display'); -%>
+    <%- include('./addQuestions'); -%>
   </body>
 </html>
