--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,9 +8,9 @@
         <h1>Users</h1>
         <ul>
           <%_ for (const user of users) { -%>
-          <li><%- user.user_id -%>,   <%- user.first_name  -%>,  <%- user.last_name-%></li>
+          <li class = 'border rounded bg-light'><%- user.user_id -%>,   <%- user.first_name  -%>,  <%- user.last_name-%></li>
           <%_ } -%>
-          </ul>
+        </ul>
       </div>
     </div>
   </body>
