--- a/views/questions/display.ejs
+++ b/views/questions/display.ejs
@@ -1,25 +1,32 @@
-<%- include('../navbar', {active: 'questions'}); -%>
-<div class="row container-fluid border rounded">
-  <div class="col bg-light">
-    <div class="col-auto p-3 ">
-      <nav class="nav nav-pills nav-fill flex-column">
-        <%_ for (const user of userIDs) { -%>
-          <%_ const status = (user === question.user_id) ? 'active bg-light' : 'inactive'; -%>
-          <a href="/questions/<%= user -%>" class="nav-item nav-link bg-light"> <%= user -%></a>
-        <%_ } -%>
-      </nav>
-    </div>
-    <div class="col">
-      <main class="p-3">
-        <%_ for (const aQuestion of question) { -%>
-          <h2 class="text-center"><%- aQuestion.user_id -%></h2>
-          <h3>Question: <%- aQuestion.question -%></h3>
-          <%_ for (const option of aQuestion.options) {-%>
-            <p><%= option -%></p>
 
-          <%_ } -%>
-          <h3>Answer: <%- aQuestion.answer -%></h3>
+
+
+<div class="col-1 ">
+  <h6 class="centered">People</h6>
+  <nav class="nav nav-pills nav-fill flex-column">
+    <%_ for (const user of userIDs) { -%>
+      <%_ const status = (user === question.user_id) ? 'active bg-dark' : 'inactive'; -%>
+      <a href="/questions/<%= user -%>" class="nav-item nav-link "> <%= user -%></a>
+    <%_ } -%>
+  </nav>
+</div>
+<div class="col">
+  <main class="p-3">
+      <%_ for (const aQuestion of question) {-%>
+        <form id="<%= aQuestion.id -%>" >
+        <h1 class ="bg-light p-1"><%= aQuestion.user_id -%> </h1>
+        <div class="border rounded p-3">
+        <h3>Question: <%- aQuestion.question -%></h3>
+        <%_ for (const option of aQuestion.options) {-%>
+          <div class="row">
+            <p class = "col-9"><%= option -%></p>
+          </div>
         <%_ } -%>
-      </main>
-    </div>
-  </div>
+        <h2 class = "text-success">Answer: <%- aQuestion.answer -%></h2>
+        </div>
+        <button class="delete btn btn-sm btn-primary m-1">Delete</button>
+        </form>
+      <%_ } -%>
+  </main>
+  <%- include('./scripts'); -%>
+</div>
