--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -10,7 +10,7 @@
           <%_ for (const user of users) { -%>
             <form id="<%= user.id -%>" >
               <div class="border rounded bg-light ">
-                <h3 ><%- user.user_id -%></h3>
+                <h3 class="p-3" ><%- user.user_id -%></h3>
                 <h1 class="text-right p-3"><%- user.first_name-%></h1>
                 <h1 class="text-right p-3"><%- user.last_name-%></h1>
               </div>
