take a quiz page

--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -4,8 +4,9 @@
   <body>
     <%- include('../navbar', {active: 'questions'}); -%>
     <div class="row">
-      <%- include('./display'); -%>
-      <%- include('./addQuestions'); -%>
+      <!-- <%- include('./display'); -%>
+      <%- include('./add'); -%> -->
+      <%- include('./take'); -%> -->
     </div>
 
   </body>
