--- a/views/questions/take.ejs
+++ b/views/questions/take.ejs
@@ -9,21 +9,24 @@
 </div>
 <div class="col">
   <main class="p-3">
+
       <%_ for (const aQuestion of question) {-%>
-        <form id="<%= aQuestion.id -%>" >
+        <form id="<%= aQuestion.id -%>" value = "<%= aQuestion.id -%>">
         <h1 class ="bg-light p-1"><%= aQuestion.user_id -%> </h1>
         <div class="border rounded p-3">
         <h3>Question: <%- aQuestion.question -%></h3>
+        <select id = "options">
         <%_ for (const option of aQuestion.options) {-%>
-          <label >
-            <input type="radio" id="<%= option -%>" name="option">
-            <%= option -%>
-          </label>
+            <option value=""><%= option -%></option>
         <%_ } -%>
+
+        </select>
         </div>
         <button class= " enter btn btn-sm btn-primary m-1">Submit</button>
         </form>
       <%_ } -%>
+
   </main>
-  <%- include('./scripts'); -%>
+
+  <%- include('./scripts', {question: question}); -%>
 </div>
