--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -4,9 +4,9 @@
   <body>
     <%- include('../navbar', {active: 'questions'}); -%>
     <div class="row">
-      <!-- <%- include('./display'); -%>
-      <%- include('./add'); -%> -->
-      <%- include('./take'); -%> -->
+      <%- include('./display'); -%>
+      <%- include('./add'); -%>
+      <!-- <%- include('./take'); -%> --> -->
     </div>
 
   </body>
