Changes styling but doesn't figure out update

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
-<header class="navbar navbar-expand navbar-light bg-light">
-  <h1 class="navbar-brand mb-0 h1">QUIZ</h1>
+<header class="navbar navbar-expand navbar-light bg-info">
+  <h1 class="navbar-brand mb-0 h1 text-warning">Quiz Your Friends</h1>
   <nav class="navbar-nav ml-3">
     <a href="/" class="nav-item nav-link <%= (active === 'home') ? 'active' : 'inactive' -%>">Home</a>
     <a href="/users" class="nav-item nav-link <%= (active === 'users') ? 'active' : 'inactive' -%>">Users</a>
