--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -3,10 +3,10 @@
   <%- include('../head'); -%>
   <body>
     <%- include('../navbar', {active: 'questions'}); -%>
-    <div class="row">
+    <div class="row py-4 px-5">
       <%- include('./display'); -%>
       <%- include('./add'); -%>
-      <!-- <%- include('./take'); -%> --> -->
+      <!-- <%- include('./take'); -%> -->
     </div>
 
   </body>
