--- a/views/questions/scripts.ejs
+++ b/views/questions/scripts.ejs
@@ -1,7 +1,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
 
-// Create aQUESTION:
+// Create a question:
 $('#create').on('submit', function(event) {
   const form = $(this).closest('form');
   event.preventDefault();
@@ -10,17 +10,26 @@ $('#create').on('submit', function(event) {
     .fail(error => alert(error.responseText));
 });
 
-
+// delete a question
 $(document).on('click', '.delete', function(event) {
    const form = $(this).closest('form');
+   const question_id = form.attr('id')
    event.preventDefault();
-   $.ajax({method: 'delete', url: `/questions/${form.attr('id')}`})
-     .done(() => form.remove())
+   console.log(question_id);
+   $.ajax({method: 'delete', url: `/questions/${question_id}`})
+     .done(() => {
+        console.log('done');
+        form.remove()
+        window.location.replace('/questions')
+     })
      .fail(error => alert(error.responseText));
  });
 
+// Update a course
 
- $(document).on('click', '.enter', function(event) {
+
+
+$(document).on('click', '.enter', function(event) {
     const form = $(this).closest('form');
     const x = $( "#options option:selected" , form ).text();
 
@@ -30,6 +39,6 @@ $(document).on('click', '.delete', function(event) {
 
 
     event.preventDefault();
-    });
+});
 
 </script>
