--- a/views/questions/display.ejs
+++ b/views/questions/display.ejs
@@ -1,30 +1,36 @@
 
-
-
-<div class="col-1 ">
-  <h6 class="centered">People</h6>
+<div class="col-2">
+  <h2 class="text-center">People</h2>
   <nav class="nav nav-pills nav-fill flex-column">
+    <ul class="list-group">
     <%_ for (const user of userIDs) { -%>
       <%_ const status = (user === question.user_id) ? 'active bg-dark' : 'inactive'; -%>
-      <a href="/questions/<%= user -%>" class="nav-item nav-link "> <%= user -%></a>
+      <li class="list-group-item list-group-item-info">
+        <a href="/questions/<%= user -%>" class="text-dark nav-item"> <%= user -%></a>
+      </li>
     <%_ } -%>
+    </ul>
   </nav>
 </div>
 <div class="col">
-  <main class="p-3">
+  <main class="px-3">
+      <h2 class="text-center">Questions</h2>
       <%_ for (const aQuestion of question) {-%>
-        <form id="<%= aQuestion.id -%>" >
-        <h1 class ="bg-light p-1"><%= aQuestion.user_id -%> </h1>
-        <div class="border rounded p-3">
-        <h3>Question: <%- aQuestion.question -%></h3>
-        <%_ for (const option of aQuestion.options) {-%>
-          <div class="row">
-            <p class = "col-9"><%= option -%></p>
-          </div>
-        <%_ } -%>
-        <h2 class = "text-success">Answer: <%- aQuestion.answer -%></h2>
-        </div>
-        <button class="delete btn btn-sm btn-primary m-1">Delete</button>
+        <form class='pb-3' id="<%= aQuestion.id -%>" >
+            <h3 class ="bg-info text-center rounded p-2"><%= aQuestion.user_id -%> </h3>
+            <div class="border rounded p-3" style="background-color: #bee5eb;">
+            <h3>Question: <%- aQuestion.question -%></h3>
+            <%_ for (const option of aQuestion.options) {-%>
+              <div class="row">
+                <p class = "col-9"><%= option -%></p>
+              </div>
+            <%_ } -%>
+            <h2 class = "text-success">Answer: <%- aQuestion.answer -%></h2>
+            </div>
+            <%_ if (admin) { -%>
+                <button class="delete btn btn-sm btn-primary m-1">Delete</button>
+            <%_ } -%>
+            <button class="update btn btn-sm btn-primary m-1">Update</button>
         </form>
       <%_ } -%>
   </main>
