--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,11 +8,12 @@
         <h1>Users</h1>
         <ul class="col p-3">
           <%_ for (const user of users) { -%>
-            <form id="<%= user.id -%>" >
-              <div class="border rounded bg-light ">
-                <h3 class="p-3" ><%- user.user_id -%></h3>
-                <h1 class="text-right p-3"><%- user.first_name-%></h1>
-                <h1 class="text-right p-3"><%- user.last_name-%></h1>
+            <form class="mb-3" id="<%= user.id -%>" >
+              <div class="border rounded row" style="background-color: #bee5eb;">
+                <div class="col">
+                    <h1 class="py-3 pr-3"><%- user.first_name-%> <%- user.last_name-%></h1>
+                </div>
+                <h3 class="text-right pr-4 pt-4 col-6" >User Id: <%- user.user_id -%></h3>
               </div>
             </form>
           <%_ } -%>
