--- a/views/questions/edit.ejs
+++ b/views/questions/edit.ejs
@@ -1,17 +1,36 @@
 
-<form class='pb-3' id="<%= question_data.id -%>" >
-    <h3 class ="bg-info text-center rounded p-2"><%= aQuestion.user_id -%> </h3>
-    <div class="border rounded p-3" style="background-color: #bee5eb;">
-    <h3>Question: <%- aQuestion.question -%></h3>
-    <%_ for (const option of aQuestion.options) {-%>
-      <div class="row">
-        <p class = "col-9"><%= option -%></p>
-      </div>
-    <%_ } -%>
-    <h2 class = "text-success">Butthole: <%- aQuestion.answer -%></h2>
+<%_ for (const aQuestion of questions) {-%>
+    <div class='pb-3'>
+        <form class='update' id="<%= aQuestion.id -%>" >
+            <h3 class ="bg-info text-center rounded p-2"><%= aQuestion.user_id -%> </h3>
+            <div class="border rounded p-3" style="background-color: #bee5eb;">
+
+            <div class="form-row">
+              <label for="question">Question</label>
+              <input id="question" type="text" name="question" placeholder="Question" value="<%= aQuestion.question -%>"  class="form-control form-control-lg font-weight-bold mb-1">
+              <label for="user_id">User Id</label>
+              <input id="user_id" type="text" name="user_id" placeholder="User Id" value="<%= aQuestion.user_id -%>" class="form-control form-control-lg font-weight-bold mb-1">
+            </div>
+            <label for="options">Options</label>
+            <%_ for (const option of aQuestion.options) {-%>
+                <input
+                    type="text"
+                    name="options"
+                    placeholder="option"
+                    value="<%- option -%>"
+                    class="form-control form-control-lg font-weight-bold mb-1"
+                >
+            <%_ } -%>
+            <label class="text-success">Answer:</label>
+            <input
+                type="text"
+                name="answer"
+                placeholder="Answer"
+                value="<%- aQuestion.answer -%>"
+                class="form-control form-control-lg font-weight-bold mb-1"
+            >
+            <button class="delete btn btn-sm btn-primary m-1">Delete</button>
+            <button class="btn btn-sm btn-primary m-1">Update</button>
+        </form>
     </div>
-    <%_ if (admin) { -%>
-        <button class="delete btn btn-sm btn-primary m-1">Delete</button>
-    <%_ } -%>
-    <button class="update btn btn-sm btn-primary m-1">Update</button>
-</form>
+<%_ }-%>
