--- a/views/questions/index.ejs
+++ b/views/questions/index.ejs
@@ -4,10 +4,10 @@
   <body>
     <%- include('../navbar', {active: 'questions'}); -%>
     <div class="row py-4 px-5">
-      <%- include('./display'); -%>
-      <%- include('./add'); -%>
-      <!-- <%- include('./take'); -%> -->
+      <!-- <%- include('./display'); -%>
+      <%- include('./add'); -%> -->
+      <%- include('./take'); -%>
     </div>
-
+  <%- include('./scripts', {questions: question}); -%>
   </body>
 </html>
