Working login and add page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <%- include('../head'); -%>
+  <%- include('./head'); -%>
   <body>
-    <%- include('../navbar', {active: 'home'}); -%>
+    <%- include('./navbar', {active: 'home'}); -%>
     <div class="container-fluid">
       <div class="row">
         Quiz Your Friends
