--- a/views/questions/edit.ejs
+++ b/views/questions/edit.ejs
@@ -31,5 +31,6 @@
       <button class="delete btn btn-sm btn-primary m-1">Delete</button>
       <button class="btn btn-sm btn-primary m-1">Update</button>
     </form>
+    <%= include('./scripts'); -%>
   </div>
 <%_ }-%>
