--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,7 +2,14 @@
   <h1 class="navbar-brand mb-0 h1 text-warning">Quiz Your Friends</h1>
   <nav class="navbar-nav ml-3">
     <a href="/" class="nav-item nav-link <%= (active === 'home') ? 'active' : 'inactive' -%>">Home</a>
-    <a href="/users" class="nav-item nav-link <%= (active === 'users') ? 'active' : 'inactive' -%>">Users</a>
-    <a href="/questions" class="nav-item nav-link <%= (active === 'questions') ? 'active' : 'inactive' -%>">Questions</a>
+    <%_ if (name) { -%>
+      <a href="/users" class="nav-item nav-link <%= (active === 'users') ? 'active' : 'inactive' -%>">Users</a>
+      <a href="/questions" class="nav-item nav-link <%= (active === 'questions') ? 'active' : 'inactive' -%>">Questions</a>
+    <%_ } -%>
+  </nav>
+  <nav class="navbar-nav ml-auto">
+    <%_ if (name) { -%>
+      <a href="/logout" class="nav-item nav-link">Logout</a>
+    <%_ } -%>
   </nav>
 </header>
