--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -18,19 +18,18 @@
             </form>
           <%_ } -%>
       </div>
-      <!-- <div class="col">
+      <div class="col">
 
         <form id="new" class="form my-1 p-4">
           <h2>Enter Information</h2>
-          <input type="text" name="user_id" placeholder="username" size="1" class="form-control col form-control-lg">
-          <div class="form-row">
-            <input type="text" name="first_name" placeholder="first" size="1" class="form-control col form-control-lg">
-            <input type="text" name="last_name" placeholder="last" size="1" class="form-control  col form-control-lg">
-          </div>
-        <button id = "new" class="btn btn-sm btn-primary m-1">new user</button>
+          <input type="text" id="user_id" name="user_id" placeholder="username" size="1" class="form-control col form-control-lg">
+          <input type="text" id="first_name" name="first_name" placeholder="first" size="1" class="form-control col form-control-lg">
+          <input type="text" id="last_name" name="last_name" placeholder="last" size="1" class="form-control  col form-control-lg">
+          <button id = "new" class="btn btn-sm btn-primary m-1">new user</button>
         </form>
+
         <%- include('./script'); -%>
-      </div> -->
+      </div>
     </div>
 
   </body>
