--- a/views/users/script.ejs
+++ b/views/users/script.ejs
@@ -1,14 +1,15 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
 
-
-$('#new').on('submit', function(event) {
-  const form = $(this).closest('form');
-  event.preventDefault();
-  $.ajax({method: 'post', url: '/users', data: form.serialize()})
-    .done()
-    .fail(error => alert(error.responseText));
+$(document).ready(function(){
+  $("#new").on('submit', function() {
+    const form = $(this).closest('form');
+    
+    event.preventDefault();
+    $.ajax({method: 'post', url: '/users', data: form.serialize()})
+      .done()
+      .fail(error => alert(error.responseText));
+  });
 });
-
 
 </script>
