--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -4,11 +4,15 @@
   <body>
     <%- include('../navbar', {active: 'home'}); -%>
     <div class="row py-4 px-5">
-      <%_ if (name) { -%>
-        <%- include('./home', {question: question}); -%>
-        <%- include('./add', {name: name}); -%>
+      <%_ if (name === 'DOES_NOT_EXIST') { -%>
+        <%- include('./create'); -%>
       <%_ } else { -%>
-        <%- include('./login'); -%>
+        <%_ if (name) { -%>
+          <%- include('./home', {question: question}); -%>
+          <%- include('./add', {name: name}); -%>
+        <%_ } else { -%>
+          <%- include('./login'); -%>
+        <%_ } -%>
       <%_ } -%>
     </div>
     <%- include('./scripts'); -%>
