--- a/views/login/scripts.ejs
+++ b/views/login/scripts.ejs
@@ -9,11 +9,11 @@ $('.login-form').on('submit', function(event) {
   $.ajax({method: 'get', url: `/users`})
     .done((users) => {
       if (users.includes(user_id)) {
-        $.ajax({method: 'get', url: `/login/?user_does_not_exist=false&user_id=${user_id}`})
+        $.ajax({method: 'get', url: `/login/?user_id=${user_id}`})
           .done(() => location = location)
           .fail(error => alert(error.responseText));
       } else {
-        $.ajax({method: 'get', url: `/login/?user_does_not_exist=true&user_id=${user_id}`})
+        $.ajax({method: 'get', url: `/users/create-user`})
           .done(() => location = location)
           .fail(error => alert(error.responseText));
       }
@@ -58,5 +58,18 @@ $(document).on('click', '.delete', function(event) {
     })
     .fail(error => alert(error.responseText));
  });
+
+ $(document).ready(function(){
+  $("#new").on('submit', function() {
+    const form = $(this).closest('form');
+    const user_id = form.find('#user_id');
+    event.preventDefault();
+    $.ajax({method: 'post', url: '/users', data: form.serialize()})
+      .done(() => {
+        $.ajax({method: 'get', url: `/login/?user_id=${user_id}`})
+      })
+      .fail(error => alert(error.responseText));
+  });
+});
 
 </script>
